--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -8,6 +8,51 @@
     tools:context=".SettingsActivity">
 
     <LinearLayout
+        android:id="@+id/app_language_button"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bu7"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="@dimen/bu3"
+            android:layout_height="@dimen/bu3"
+            android:layout_margin="@dimen/bu1"
+            android:scaleType="fitXY"
+            android:src="@drawable/icon_app_language" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_app_language"
+                android:textColor="@color/grey_blue"
+                android:textSize="@dimen/text_size_36px" />
+
+            <TextView
+                android:id="@+id/app_language_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/grey_blue"
+                android:textSize="@dimen/text_size_30px" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="@dimen/bu1"
+        android:layout_marginRight="@dimen/bu1"
+        android:background="@color/greyed" />
+
+    <LinearLayout
         android:id="@+id/language_button"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bu7"
