--- a/app/src/main/res/drawable/settings_button_selector.xml
+++ b/app/src/main/res/drawable/settings_button_selector.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/icon_settings_pressed" android:state_pressed="true" />
-    <item android:drawable="@drawable/icon_settings" />
+    <item android:drawable="@drawable/icon_settings_pressed" />
 
 </selector>
